# python-rag-chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: config.py  logging_config.py  pipeline.py
data/: documento1_ia_ml.md  documento2_nlp.md  documento3_rag.md
database/: connection.py  setup_pgvector.py  vector_store.py
middleware/: __init__.py  logging_middleware.py
models/: chunk.py  document.py
routes/: __init__.py  chatbot_route.py
services/: __init__.py  chunking_service.py  embedding_service.py  guardrails_service.py  ingestion_service.py  llm_service.py  observability_service.py  prompt_service.py  retrieval_service.py
